src/test/testFiles/invalid/semanticErrors/incompatibleReturnType.manimdsl
fun func(number x) {
return 5;
}

let z = func(5);